--- a/CellularTrauma/CellularTrauma.csproj
+++ b/CellularTrauma/CellularTrauma.csproj
@@ -43,6 +43,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Button.cs" />
     <Compile Include="CellularTrauma.cs" />
     <Compile Include="MenuUI.cs" />
     <Compile Include="Program.cs" />
