--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -44,11 +44,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Button.cs" />
     <Compile Include="Credits.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="Fight.cs" />
     <Compile Include="Level.cs" />
-    <Compile Include="Menu.cs" />
+    <Compile Include="MouseInput.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="States.cs" />
