--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -7,8 +7,9 @@
     <OutputType>Library</OutputType>
     <RootNamespace>Engine</RootNamespace>
     <AssemblyName>Engine</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <AppDesignerFolder>Properties</AppDesignerFolder>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Platform)' == 'AnyCPU' ">
@@ -45,13 +46,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Credits.cs" />
-    <Compile Include="Entity.cs" />
+    <Compile Include="GameCharacter.cs" />
     <Compile Include="Fight.cs" />
+    <Compile Include="Karna.cs" />
     <Compile Include="Level.cs" />
     <Compile Include="MouseInput.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="States.cs" />
+    <Compile Include="State.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="MonoGame.Framework.dll.config" />
