--- a/CellularTrauma/CellularTrauma.csproj
+++ b/CellularTrauma/CellularTrauma.csproj
@@ -44,6 +44,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Animation.cs" />
     <Compile Include="Button.cs" />
     <Compile Include="CellularTrauma.cs" />
     <Compile Include="MenuUI.cs" />
